la etiqueta de lo que guardo

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 .genio{ 
-    background-color: blue;
-    border: 1px solid red;
+    background-color: yellowgreen;
+    border: 3px solid beige;
 }
