--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
     border: 3px solid beige;
 }
 .parrafo-2{
-color: brown;
+color:black ;
+background-color:rgb(148, 209, 87);
+border: 3px solid beige;
+text-align: center;
 }
 table{
 font-family: Arial, Helvetica, sans-serif;
